# graduate_work

./: .env.simple  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: Dockerfile  aiovk.py  database.py  models.py  schemas.py
src/deploy/: video_encoding.yaml
src/flows/: convert.py  etl.py  extract.py  upload.py
src/migrations/: env.py
src/migrations/versions/: a51c0998baff_initial.py
src/services/: media_info.py  vk.py
src/settings/: __init__.py  config.py
